--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "repository": "https://github.com/ProFabric/nodejs-rest-api-boilerplate.git",
   "author": "ProFabric <mmd-1903@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node_modules/.bin/nodemon index.js",
+    "pretest": "node_modules/.bin/eslint --ignore-path .gitignore ."
+  },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "husky": "^3.0.9",
+    "nodemon": "^1.19.3"
   }
 }
