--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,9 @@
     "promise/no-promise-in-callback": "error",
     "promise/no-callback-in-promise": "error",
     "promise/no-return-in-finally": "error",
-    "prefer-arrow-callback": "error"
+    "prefer-arrow-callback": "error",
+    "comma-dangle": ["error", "never"],
+    "space-before-function-paren": ["error", "never"],
+    "strict": ["error", "global"]
   }
 }
