--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ProFabric <mmd-1903@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node_modules/.bin/nodemon .src/index.js",
+    "start": "node_modules/.bin/nodemon src/index.js",
     "lint": "node_modules/.bin/eslint 'src/**/*.js' --fix",
     "format": "node_modules/.bin/prettier-eslint 'src/**/*.{js,json}' --write"
   },
@@ -23,7 +23,22 @@
     }
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.9",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
