--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lint-staged": "^9.4.2",
     "nodemon": "^1.19.3",
     "prettier": "^1.18.2",
+    "prettier-eslint": "^9.0.1",
     "prettier-eslint-cli": "^5.0.0"
   }
 }
